// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wheel Wheel disabled 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  disabled={true}
  itemRender={[Function]}
  prefixCls="zs-wheel"
  stopScroll={false}
  valueMember="value"
>
  <div
    className="zs-wheel"
  >
    <div
      className="zs-wheel__content"
    >
      <div
        className="zs-wheel__item zs-wheel__item--selected zs-wheel__item--disabled"
        key="0"
      >
        选项一
      </div>
      <div
        className="zs-wheel__item zs-wheel__item--disabled"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;

exports[`Wheel Wheel render defaultValue 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="1"
  itemRender={[Function]}
  prefixCls="zs-wheel"
  stopScroll={false}
  valueMember="value"
>
  <div
    className="zs-wheel"
  >
    <div
      className="zs-wheel__content"
    >
      <div
        className="zs-wheel__item zs-wheel__item--selected"
        key="0"
      >
        选项一
      </div>
      <div
        className="zs-wheel__item"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;

exports[`Wheel Wheel render visible 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  itemRender={[Function]}
  prefixCls="zs-wheel"
  stopScroll={false}
  valueMember="value"
>
  <div
    className="zs-wheel"
  >
    <div
      className="zs-wheel__content"
    >
      <div
        className="zs-wheel__item zs-wheel__item--selected"
        key="0"
      >
        选项一
      </div>
      <div
        className="zs-wheel__item"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;

exports[`Wheel Wheel set props disabled 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="1"
  itemRender={[Function]}
  prefixCls="zs-wheel"
  stopScroll={false}
  value="1"
  valueMember="value"
>
  <div
    className="zs-wheel"
  >
    <div
      className="zs-wheel__content"
    >
      <div
        className="zs-wheel__item zs-wheel__item--selected"
        key="0"
      >
        选项一
      </div>
      <div
        className="zs-wheel__item"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;

exports[`Wheel Wheel set props value 1`] = `
<Wheel
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  defaultValue="1"
  itemRender={[Function]}
  prefixCls="zs-wheel"
  stopScroll={false}
  value="1"
  valueMember="value"
>
  <div
    className="zs-wheel"
  >
    <div
      className="zs-wheel__content"
    >
      <div
        className="zs-wheel__item zs-wheel__item--selected"
        key="0"
      >
        选项一
      </div>
      <div
        className="zs-wheel__item"
        key="1"
      >
        选项二
      </div>
    </div>
  </div>
</Wheel>
`;
